--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "mongoose-timestamp": "^0.6.0",
+    "morgan": "^1.9.1",
     "restify": "^7.3.0",
     "restify-errors": "^6.1.1",
     "restify-jwt-community": "^1.0.9"
